[tool.poetry]
name = "canada-crs"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
streamlit = "^1.29.0"
requests = "^2.31.0"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
